package.name = "github-mirror-releases"
package.version = "0.1.0"
package.edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
reqwest = {version = "0", features = ["blocking"] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
serde_regex = "1"
slog-syslog = "0"
slog = "2"
slog-scope = "4"
humantime-serde = "1.0"
humantime = "2"
